# agenticarXiv

./: .env.example  .gitignore  Package.swift  README.md  config.py  main.py  pyproject.toml
Sources/: main.swift
agents/: agent_with_mcp_sdk.py  arxiv_mcp_server_sdk.py  simple_arxiv_mcp_agent.py  simple_arxiv_mcp_server.py  simple_zotero.py
test/: arxiv.py
