[project]
name = "arxiv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv-client>=0.3.2",
    "asyncio>=3.4.3",
    "dotenv>=0.9.9",
    "feedparser>=6.0.11",
    "mcp>=1.10.1",
    "mistralai>=1.9.1",
    "ollama>=0.5.1",
    "openai>=1.93.0",
    "pymupdf>=1.26.3",
    "python-dotenv[cli]>=1.1.1",
    "sentence-transformers>=5.0.0",
    "typing>=3.10.0.0",
]
