[project]
name = "arxiv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "lxml>=6.0.0",
    "openai>=1.93.0",
    "progress>=1.6.1",
    "progress-bar>=8",
    "pyzotero>=1.6.11",
    "requests>=2.32.4",
]
